# sablier-proxy

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
.github/workflows/: release.yml  rust.yml  test.yml
example/: compose.yml
src/: config.rs  main.rs
