[package]
name = "sablier-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
figment = { version = "0.10.19", default-features = false, features = ["env"] }
futures = { version = "0.3.30", default-features = false }
reqwest = { version = "0.12.7", default-features = false }
serde = { version = "1.0.210", features = ["serde_derive"] }
tokio = { version = "1.40.0", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
