[package]
name = "sablier-proxy"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
figment = { version = "0.10.19", default-features = false, features = ["env"] }
futures = { version = "0.3.31", default-features = false }
reqwest = { version = "0.12.18", default-features = false }
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.45.1", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
