[package]
name = "sablier-proxy"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
figment = { version = "0.10.19", default-features = false, features = ["env"] }
futures = { version = "0.3.32", default-features = false }
reqwest = { version = "0.13.2", default-features = false, features = ["query"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
tokio = { version = "1.49.0", default-features = false, features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
